* CSS path now lowercase * In the case of a link, the file name is displayed * The whitespace before has been moved to "before" * Added the line numbers * the function addFileToSave is now sensitive and will make sure you can call it multiple times on the same file name without blowing the DOM.

--- a/server-elm-style.css
+++ b/server-elm-style.css
@@ -365,6 +365,7 @@ div#modify-menu #CSS-modification .linked-CSS {
 div#modify-menu #CSS-modification>.CSS-modify-unit {
     display: flex;
     align-items: center;
+    margin-bottom: 5px;
 }
 
 div#modify-menu #CSS-modification>.CSS-modify-unit .delete-CSS:hover {
